2004-02-11  Scott Dattalo  <scott@dattalo.com>
	* gui/* changed calls to gpsim_* to the C++ interface.
	* src/interface.cc - removed many of the gpsim_* functions
	* src/stimuli.cc, cli/cmd_set.cc - changed calls to gpsim_* to
	the C++ interface.
	
2004-02-10  Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc, src/pic-processor.h:
	Added step, run, and finish members to the ProgramMemoryAccess class
	* src/interface.cc, gui/gui*
	removed more gpsim_* functions from interface.cc
	
2004-02-10  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_symbol.cc, src/symbol.h, src/symbol.cc
	Cleaned up symbol api.
	
2004-02-09  Scott Dattalo  <scott@dattalo.com>
	* all files!
	'NULL' has been replaced with '0' throughout all of gpsim.
	The reason is two-fold: 1) MAC users were having trouble compiling
	2) Stroustrup says NULL shouldn't be used in C++ :).
	
2004-02-08  Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, gui/gui_src.cc, gui/gui_src_asm.cc,
	gui/gui_break.cc: Fixed 'ProgramMemoryAccess' class for the 18f devices
	* src/16bit-processors, src/p18x.cc: Removed some debug stuff
	* extras/lcd/*: Changed the LCD module from version 0.2.0 to 0.2.1
	
2004-02-06  Scott Dattalo  <scott@dattalo.com>
	* tons of files changed...
	Removed 'break_point' member from the Register class
	Changed the mechanism for checking how a break point is set on
	a register.
	* gui/gui.h, gui/gui_watch.cc, gui/gui_regwin.cc: modified GUIRegister
	class to adopt to changes made in the break point stuff. Also
	add rma member for getting access to processor registers.
	
2004-02-05  Scott Dattalo  <scott@dattalo.com>
	* src/pic-processor.h
	Fixed a nasty, nasty bug. The "GP_Processor" pointer in the
	pic_processor class was conditionally compiled. However the
	condition (HAVE_GUI) occurs in the include file config.h. Now
	the bug is that config.h was not included in all cases. Some